style: fix gap of breadcrumb

--- a/packages/ocean-core/src/components/breadcrumb.scss
+++ b/packages/ocean-core/src/components/breadcrumb.scss
@@ -1,7 +1,7 @@
 .ods-breadcrumb {
   align-items: center;
   display: flex;
-  gap: 8px;
+  gap: 4px;
 
   svg {
     color: $color-interface-dark-up;
